# olist-mds

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  compose.yaml  pyproject.toml
.github/workflows/: batch-cdc-parity.yml  cdc-stage2-kafka-debezium.yml  cdc-stage6-operations.yml  ci.yml
airflow/dags/: olist_cdc_dbt_local.py  olist_cdc_local.py  olist_modern_data_stack_aws.py  olist_modern_data_stack_local.py
dbt/olist_analytics/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.example  selectors.yml
docker/airflow/: Dockerfile  load-env-and-run.sh
docs/: architecture.md  ci.md  data_model.md  diagrams.md  runbook_macos.md  runbook_windows.md
docs/plans/: batch-realtime-parity-integration-test-plan.md  local-clickhouse-warehouse-migration-plan.md  near-realtime-cdc-implementation-plan.md
docs/runbooks/: cdc-alert-testing.md  cdc-connector-resnapshot.md  cdc-kafka-replay.md  cdc-local-end-to-end-validation.md  cdc-realtime-dbt.md  cdc-rebuild-from-landing.md  cdc-schema-migration.md  cdc-secret-rotation.md  cdc-service-restart.md  cdc-warehouse-ingest.md  cdc-warehouse-rebuild.md
observability/: README.md
streaming/: runtime-versions.json
tests/: test_airflow_secret_bootstrap.py  test_avro_schema_compatibility.py  test_batch_cdc_parity_integration.py  test_clickhouse_batch_phase3.py  test_clickhouse_phase1_contracts.py  test_clickhouse_phase4_dbt_graph.py  test_clickhouse_phase5_cdc_ingestion.py  test_clickhouse_phase6_realtime_dbt_quality.py  test_clickhouse_phase7_ci_observability.py  test_control_postgres_phase2.py  test_postgres_oracle_export.py  test_simulation.py  test_stage2_configuration.py  test_stage3_configuration.py  test_stage3_contracts.py  test_stage4_contracts.py  test_stage5_contracts.py  test_stage6_contracts.py
(+258 files in other folders)
