[project]
name = "olist-modern-data-stack"
version = "0.1.0"
description = "Local-first data engineering project for the Olist e-commerce dataset."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asyncpg>=0.31,<1",
    "boto3>=1.34,<1.42.85",
    "botocore>=1.42.79,<1.42.85",
    "dbt-core>=1.8,<2",
    "dbt-postgres>=1.8,<2",
    "dbt-redshift>=1.8,<2",
    "elementary-data[redshift]==0.23.4",
    "importlib-metadata>=6,<8.8",
    "pandas>=2.2,<3",
    "psycopg2-binary>=2.9,<3",
]

[dependency-groups]
dev = [
    {include-group = "airflow"},
    {include-group = "quality"},
]

airflow = [
    "apache-airflow==3.3.0",
]

quality = [
    {include-group = "lint"},
    {include-group = "typecheck"},
    "pre-commit>=4.6.0",
]

lint = [
    "ruff>=0.15.12",
    "sqlfluff>=4.1.0",
    "sqlfluff-templater-dbt>=4.1.0",
]

typecheck = [
    "pyright>=1.1.409",
]

[tool.uv]
package = false
required-version = ">=0.11.0,<0.12.0"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["airflow/dags", "scripts", "tests"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["airflow/dags", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "AIR"]
ignore = [
    # Let the formatter handle line wrapping where it can. Long CLI strings,
    # SQL snippets, and Airflow commands stay readable as explicit exceptions.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"airflow/dags/*.py" = [
    # DAG files intentionally instantiate operators at module import time.
    "B008",
]
"scripts/**/*.py" = [
    # CLI scripts bootstrap the repository root onto sys.path before local imports.
    "E402",
]
